--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ app.*.map.json
 /android/app/release
 android/app/src/google-services.json
 ios/Runner/GoogleService-Info.plist
+android/app/google-services.json
