--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: L'applicazione ideale per gli arbitri del futuro!
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -18,22 +18,27 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.11.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  authentication_repository:
+    path: packages/authentication_repository
   bloc: ^7.0.0-nullsafety.3
-  cloud_firestore: ^1.0.0
+  cloud_firestore: ^1.0.1
   cupertino_icons: ^1.0.2
   equatable: ^2.0.0
   firebase_auth: ^1.0.0
   flutter_bloc: ^7.0.0-nullsafety.5
   flutter_redux: ^0.7.0
   flutter_tindercard: ^0.1.9
+  font_awesome_flutter: ^9.0.0-nullsafety
+  formz: ^0.4.0-nullsafety.0
   google_sign_in: ^5.0.0
   hydrated_bloc: ^7.0.0-nullsafety.3
   path_provider: ^2.0.1
+  pedantic: ^1.11.0
   redux: ^4.0.0
   redux_logging: ^0.4.0
 
@@ -45,7 +50,6 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
