--- a/packages/questions_repository/pubspec.yaml
+++ b/packages/questions_repository/pubspec.yaml
@@ -5,9 +5,14 @@ version: 1.0.0+1
 environment:
   sdk: ">=2.6.0 <3.0.0"
 
+publish_to: none
+
 dependencies:
   flutter:
     sdk: flutter
+
+  authentication_repository:
+    path: ../authentication_repository
 
   cloud_firestore: ^1.0.1
   rxdart: ^0.24.0
